--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,11 @@
-.flex-container {
-    display:flex;
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #E7EDF7;
+    font-family: 'Roboto', sans-serif;
+}
+
+li, a {
+    text-decoration: none;
 }
