AStyle header and navlinks

--- a/public/index.css
+++ b/public/index.css
@@ -9,3 +9,20 @@
 li, a {
     text-decoration: none;
 }
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 5%;
+}
+
+.nav-links {
+    list-style: none;
+}
+
+.nav-links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
