--- a/public/index.css
+++ b/public/index.css
@@ -31,3 +31,17 @@ header {
     height: 40px;
 }
 
+.button {
+    padding: 9px 25px;
+    background-color: rgba(128,172,246,1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+.button:hover {
+    background-color: rgba(128,172,246,0.8);
+}
+
+
