--- a/public/index.css
+++ b/public/index.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #E7EDF7;
+    background-color: rgb(255, 255, 255);
     font-family: 'Roboto', sans-serif;
 }
 
@@ -10,11 +10,12 @@ li, a {
     text-decoration: none;
 }
 
-header {
+.navbar-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 5%;
+    padding: 10px 3%;
+    height: 8vh;
 }
 
 .nav-links {
@@ -42,6 +43,17 @@ header {
 
 .button:hover {
     background-color: rgba(128,172,246,0.8);
+}   
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    height: 60vh;
+    padding: 1em;
+    background-image: url(https://source.unsplash.com/MQzSZ5BkjAg); 
+    background-position: center;
+    background-size: cover;
 }
 
 
