--- a/public/index.css
+++ b/public/index.css
@@ -1,59 +1,99 @@
 * {
     box-sizing: border-box;
-    margin: 0;
     padding: 0;
-    background-color: rgb(255, 255, 255);
-    font-family: 'Roboto', sans-serif;
+    margin:0;
 }
 
-li, a {
+li, a{
     text-decoration: none;
 }
 
-.navbar-header {
+.home-container {
+    background: #DDDFE7;
     display: flex;
+    flex-direction: column;
+}
+
+.navbar-container {
+    height: 15vh;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 3%;
-    height: 8vh;
 }
 
-.nav-links {
-    list-style: none;
+.logo-container {
+    height: 15vh;
+    width: 15vw;
 }
+
+.logo-image {
+    height: 100%;
+    width: 100%;
+    padding-left: 15px;
+    padding-top: 15px;
+}
+
+.navbar-container button {
+    padding: 5px 5px;
+    background-color: rgba(128,172,246,1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    color: white;
+}
+
+ 
 
 .nav-links li {
-    display: inline-block;
-    padding: 0px 20px;
+    padding: 9px 25px;
 }
 
 .logo {
-    width: 40px;
-    height: 40px;
+    height: 60%;
+    width: 50%;
+    padding: 10px;
+    align-self: auto;
 }
 
-.button {
+.nav-links {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    padding: 10px;
+}
+
+.nav-links li {
+    padding-left: 10px;
+}
+
+
+.hero-container {
+    color: white;
+    height: 50vh;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hero-footer {
+    align-self: center;
+    margin-bottom: 30px;
+}
+
+.hero-footer button {
     padding: 9px 25px;
     background-color: rgba(128,172,246,1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
+    color: white;
 }
 
-.button:hover {
-    background-color: rgba(128,172,246,0.8);
-}   
-
-.hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; 
-    height: 60vh;
-    padding: 1em;
-    background-image: url(https://source.unsplash.com/MQzSZ5BkjAg); 
-    background-position: center;
-    background-size: cover;
+a:visited{
+    color: white;
 }
-
 
