--- a/public/index.css
+++ b/public/index.css
@@ -12,6 +12,7 @@ li, a{
     background: #DDDFE7;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 .navbar-container {
@@ -28,14 +29,14 @@ li, a{
 }
 
 .logo-image {
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
     padding-left: 15px;
     padding-top: 15px;
 }
 
 .navbar-container button {
-    padding: 5px 5px;
+    padding: 10px 20px;
     background-color: rgba(128,172,246,1);
     border: none;
     border-radius: 50px;
@@ -50,16 +51,10 @@ li, a{
     padding: 9px 25px;
 }
 
-.logo {
-    height: 60%;
-    width: 50%;
-    padding: 10px;
-    align-self: auto;
-}
-
 .nav-links {
     display: flex;
     flex-direction: row;
+    align-items: center;
     list-style: none;
     padding: 10px;
 }
@@ -71,16 +66,29 @@ li, a{
 
 .hero-container {
     color: white;
-    height: 50vh;
+    height: 85vh;
     align-self: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: baseline;
 }
 
-.hero-footer {
+.hero-image {
+    height: 100%;
+    width: 40%;
     align-self: center;
-    margin-bottom: 30px;
+    margin-bottom: 10%;
+}
+
+.hero-left {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 20%;
+    padding-bottom: 10%;
 }
 
 .hero-footer button {
