--- a/public/index.css
+++ b/public/index.css
@@ -87,8 +87,9 @@ li, a{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    margin-left: 20%;
+    margin-left: 10%;
     padding-bottom: 10%;
+    font-size:200%;
 }
 
 .hero-footer button {
