--- a/public/index.css
+++ b/public/index.css
@@ -78,11 +78,12 @@ li, a{
     height: 100%;
     width: 40%;
     align-self: center;
-    margin-bottom: 10%;
+    margin-top:10%;
+    margin-bottom:10%;
 }
 
 .hero-left {
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -104,5 +105,9 @@ li, a{
 
 a:visited{
     color: white;
+}
+
+.items-container {
+    display: flex;
 }
 
