--- a/public/index.css
+++ b/public/index.css
@@ -79,7 +79,8 @@ li, a{
     width: 40%;
     align-self: center;
     margin-top:10%;
-    margin-bottom:10%;
+    margin-bottom:12%;
+    margin-right: 3%;
 }
 
 .hero-left {
@@ -89,6 +90,7 @@ li, a{
     justify-content: space-evenly;
     align-items: center;
     margin-left: 10%;
+    padding-top: 10%;
     padding-bottom: 10%;
     font-size:200%;
 }
@@ -109,5 +111,14 @@ a:visited{
 
 .items-container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.item-container {
+    width: 20vw;
+    display: flex;
+    flex-direction: column;
+
 }
 
