--- a/public/index.css
+++ b/public/index.css
@@ -116,24 +116,67 @@ a:visited{
 .items-container {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-around; */
+    justify-content: space-evenly;
 }
 
 .item-card {
-    /* width: 20vw;
+    transition: 0.3s;
+    border: 2px solid black;
+    border-radius: 15px;
     display: flex;
-    flex-direction: column; */
-    padding: 2%;
-    flex-grow: 1;
-    flex-basis: 16%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-right: auto;
+}
+
+.item-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .item-image {
-    max-width: 100%;
+    
+}
+
+.item-image img {
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 100%;
 }
 
 .item-info {
-    margin-top: auto;
+    
+}
+
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.login-form input {
+    padding: 10px;
+    margin: 10px;
+}
+
+.signup-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.signup-form input {
+    padding: 10px;
+    margin: 10px;
 }
 
 
